--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>library-geocodes</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Lutece geocode library</name>
 
     <repositories>
@@ -88,6 +88,7 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-tech-library-geocodes</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-library-geocodes</developerConnection>
         <url>https://github.com/lutece-platform/lutece-tech-library-geocodes</url>
-    </scm>
+      <tag>library-geocodes-1.0.0</tag>
+  </scm>
 
 </project>
