--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,9 @@
     </dependencies>
 
     <scm>
-        <connection>scm:git:https://github.com/lutece-platform/lutece-tech-library-geocodes</connection>
-        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-library-geocodes</developerConnection>
-        <url>https://github.com/lutece-platform/lutece-tech-library-geocodes</url>
+        <connection>scm:git:https://github.com/lutece-platform/lutece-tech-library-geocodes.git</connection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-library-geocodes.git</developerConnection>
+        <url>https://github.com/lutece-platform/lutece-tech-library-geocodes.git</url>
       <tag>HEAD</tag>
   </scm>
 
