--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>library-geocodes</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>Lutece geocode library</name>
 
     <repositories>
@@ -77,7 +77,7 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-tech-library-geocodes.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-library-geocodes.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-tech-library-geocodes.git</url>
-      <tag>HEAD</tag>
+      <tag>library-geocodes-1.0.1</tag>
   </scm>
 
 </project>
